--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "dependencies": {
     "express": "^4.18.1"
   },
+  
   "name": "procesos22-23",
   "version": "1.0.0",
   "main": "index.js",
+  "devDependencies": {},
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
