--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "dependencies": {
     "express": "^4.18.1",
-    "socket.io": "^4.5.3"
+    "socket.io": "^4.5.3",
+    "jasmine-node": "3n.0.0"
   },
   "name": "procesos22-23",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/jasmine-node servidor"
   },
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Joseemgp/Procesos22-23.git"
