--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js false",
-    "test": "./node_modules/.bin/jasmine-node servidor"
+    "test": "node_modules\\.bin\\jasmine-node servidor"
   },
 
   "repository": {
